// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CatchClause > client > should skip server try statements in non-async functions 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
const example = () => {
  try {
    doStuff();
  } catch (err) {
    const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=client&my-example=0.ts")).default, null)({
      l: [],
      m: []
    });
  }
};",
  "entries": [
    "/path/to/example.ts?mode=client&my-example=0.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=client&my-example=0.ts" => {
      "code": "import { server as entry } from "my-example/client";
export default entry("26ecc3a5-0-example");",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACM,MAAMA,OAAO,GAAGA,CAAA,KAAM;EACpB,IAAI;IACFC,OAAO,CAAC,CAAC;EACX,CAAC,CAAC,OAAOC,GAAG;IAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;MAAAC,CAAA;MAAAC,CAAA;IAAA;EAAA;AAId,CAAC",
    "names": [
      "example",
      "doStuff",
      "err",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const example = () => {
        try {
          doStuff();
        } catch (err) {
          'use server';
          report(err);
        }
      };
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`CatchClause > client > should skip top-level values for scope 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
const value = 'foo bar';
try {
  doStuff();
} catch (err) {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=client&my-example=0.ts")).default, null)({
    l: [value],
    m: []
  });
}",
  "entries": [
    "/path/to/example.ts?mode=client&my-example=0.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=client&my-example=0.ts" => {
      "code": "import { server as entry } from "my-example/client";
export default entry("26ecc3a5-0-anonymous");",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACM,MAAMA,KAAK,GAAG,SAAS;AACvB,IAAI;EACFC,OAAO,CAAC,CAAC;AACX,CAAC,CAAC,OAAOC,GAAG;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;IAAAC,CAAA,GAHNP,KAAK;IAAAQ,CAAA;EAAA;AAAA",
    "names": [
      "value",
      "doStuff",
      "err",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const value = 'foo bar';
      try {
        doStuff();
      } catch (err) {
        'use server';
        await report(value, err);
      }
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`CatchClause > client > should transform valid server functions with scope 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
async function foo() {
  const value = 'foo bar';
  try {
    doStuff();
  } catch (err) {
    const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=client&my-example=0.ts")).default, null)({
      l: [value],
      m: []
    });
  }
}",
  "entries": [
    "/path/to/example.ts?mode=client&my-example=0.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=client&my-example=0.ts" => {
      "code": "import { server as entry } from "my-example/client";
export default entry("26ecc3a5-0-foo");",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACM,eAAeA,GAAGA,CAAA,EAAG;EACnB,MAAMC,KAAK,GAAG,SAAS;EACvB,IAAI;IACFC,OAAO,CAAC,CAAC;EACX,CAAC,CAAC,OAAOC,GAAG;IAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;MAAAC,CAAA,GAHNP,KAAK;MAAAQ,CAAA;IAAA;EAAA;AAOb",
    "names": [
      "foo",
      "value",
      "doStuff",
      "err",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      async function foo() {
        const value = 'foo bar';
        try {
          doStuff();
        } catch (err) {
          'use server';
          await report(value, err);
        }
      }
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`CatchClause > client > should transform valid server try statements 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
try {
  doStuff();
} catch (err) {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=client&my-example=0.ts")).default, null)({
    l: [],
    m: []
  });
}",
  "entries": [
    "/path/to/example.ts?mode=client&my-example=0.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=client&my-example=0.ts" => {
      "code": "import { server as entry } from "my-example/client";
export default entry("26ecc3a5-0-anonymous");",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACM,IAAI;EACFA,OAAO,CAAC,CAAC;AACX,CAAC,CAAC,OAAOC,GAAG;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;IAAAC,CAAA;IAAAC,CAAA;EAAA;AAAA",
    "names": [
      "doStuff",
      "err",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      try {
        doStuff();
      } catch (err) {
        'use server';
        await report(err);
      }
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`CatchClause > server > should skip server try statements in non-async functions 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
const example = () => {
  try {
    doStuff();
  } catch (err) {
    const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=server&my-example=1.ts")).default, null)({
      l: [],
      m: []
    });
  }
};",
  "entries": [
    "/path/to/example.ts?mode=server&my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=server&my-example=0.ts" => {
      "code": "import { $$run as $$run_1 } from "my-example/runtime";
import { $$context as $$context_1 } from "my-example/runtime";
export default (async function () {
  const ctx_1 = $$context_1();
  try {
    $$run_1(ctx_1, report, err);
  } catch (error_1) {
    return [4, error_1];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": ";;;;;IAMUA,OAAA,CAAAC,KAAA,EAAAC,MAAM,EAACC,GAAG;EAAE,SAAAC,OAAA;IAAA,WAAAA,OAAA;EAAA;EAAA;AAAA",
        "names": [
          "$$run_1",
          "ctx_1",
          "report",
          "err",
          "error_1",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?mode=server&my-example=1.ts" => {
      "code": "import { server as entry } from "my-example/server";
import root from "./example.ts?mode=server&my-example=0.ts";
import { $$wrapBlock as wrapper } from "my-example/runtime";
export default entry("26ecc3a5-0-example", wrapper(root));",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACM,MAAMA,OAAO,GAAGA,CAAA,KAAM;EACpB,IAAI;IACFC,OAAO,CAAC,CAAC;EACX,CAAC,CAAC,OAAOC,GAAG;IAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;MAAAC,CAAA;MAAAC,CAAA;IAAA;EAAA;AAId,CAAC",
    "names": [
      "example",
      "doStuff",
      "err",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const example = () => {
        try {
          doStuff();
        } catch (err) {
          'use server';
          report(err);
        }
      };
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?mode=server&my-example=0.ts",
  ],
}
`;

exports[`CatchClause > server > should skip top-level values for scope 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
const value = 'foo bar';
try {
  doStuff();
} catch (err) {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=server&my-example=1.ts")).default, null)({
    l: [],
    m: []
  });
}",
  "entries": [
    "/path/to/example.ts?mode=server&my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=server&my-example=0.ts" => {
      "code": "import { $$run as $$run_1 } from "my-example/runtime";
import { $$context as $$context_1 } from "my-example/runtime";
export default (async function () {
  const ctx_1 = $$context_1();
  try {
    await $$run_1(ctx_1, report, err);
  } catch (error_1) {
    return [4, error_1];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": ";;;;;IAMQ,MAAAA,OAAA,CAAAC,KAAA,EAAMC,MAAM,EAACC,GAAG,CAAC;EAAC,SAAAC,OAAA;IAAA,WAAAA,OAAA;EAAA;EAAA;AAAA",
        "names": [
          "$$run_1",
          "ctx_1",
          "report",
          "err",
          "error_1",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?mode=server&my-example=1.ts" => {
      "code": "import { server as entry } from "my-example/server";
import root from "./example.ts?mode=server&my-example=0.ts";
import { $$wrapBlock as wrapper } from "my-example/runtime";
export default entry("26ecc3a5-0-anonymous", wrapper(root));",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACM,MAAMA,KAAK,GAAG,SAAS;AACvB,IAAI;EACFC,OAAO,CAAC,CAAC;AACX,CAAC,CAAC,OAAOC,GAAG;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;IAAAC,CAAA;IAAAC,CAAA;EAAA;AAAA",
    "names": [
      "value",
      "doStuff",
      "err",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const value = 'foo bar';
      try {
        doStuff();
      } catch (err) {
        'use server';
        await report(err);
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?mode=server&my-example=0.ts",
  ],
}
`;

exports[`CatchClause > server > should transform valid server functions with scope 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
async function foo() {
  const value = 'foo bar';
  try {
    doStuff();
  } catch (err) {
    const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=server&my-example=1.ts")).default, null)({
      l: [],
      m: []
    });
  }
}",
  "entries": [
    "/path/to/example.ts?mode=server&my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=server&my-example=0.ts" => {
      "code": "import { $$run as $$run_1 } from "my-example/runtime";
import { $$context as $$context_1 } from "my-example/runtime";
export default (async function () {
  const ctx_1 = $$context_1();
  try {
    await $$run_1(ctx_1, report, err);
  } catch (error_1) {
    return [4, error_1];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": ";;;;;IAOU,MAAAA,OAAA,CAAAC,KAAA,EAAMC,MAAM,EAACC,GAAG,CAAC;EAAC,SAAAC,OAAA;IAAA,WAAAA,OAAA;EAAA;EAAA;AAAA",
        "names": [
          "$$run_1",
          "ctx_1",
          "report",
          "err",
          "error_1",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?mode=server&my-example=1.ts" => {
      "code": "import { server as entry } from "my-example/server";
import root from "./example.ts?mode=server&my-example=0.ts";
import { $$wrapBlock as wrapper } from "my-example/runtime";
export default entry("26ecc3a5-0-foo", wrapper(root));",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACM,eAAeA,GAAGA,CAAA,EAAG;EACnB,MAAMC,KAAK,GAAG,SAAS;EACvB,IAAI;IACFC,OAAO,CAAC,CAAC;EACX,CAAC,CAAC,OAAOC,GAAG;IAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;MAAAC,CAAA;MAAAC,CAAA;IAAA;EAAA;AAId",
    "names": [
      "foo",
      "value",
      "doStuff",
      "err",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      async function foo() {
        const value = 'foo bar';
        try {
          doStuff();
        } catch (err) {
          'use server';
          await report(err);
        }
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?mode=server&my-example=0.ts",
  ],
}
`;

exports[`CatchClause > server > should transform valid server try statements 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
try {
  doStuff();
} catch (err) {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=server&my-example=1.ts")).default, null)({
    l: [],
    m: []
  });
}",
  "entries": [
    "/path/to/example.ts?mode=server&my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=server&my-example=0.ts" => {
      "code": "import { $$run as $$run_1 } from "my-example/runtime";
import { $$context as $$context_1 } from "my-example/runtime";
export default (async function () {
  const ctx_1 = $$context_1();
  try {
    await $$run_1(ctx_1, report, err);
  } catch (error_1) {
    return [4, error_1];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": ";;;;;IAKQ,MAAAA,OAAA,CAAAC,KAAA,EAAMC,MAAM,EAACC,GAAG,CAAC;EAAC,SAAAC,OAAA;IAAA,WAAAA,OAAA;EAAA;EAAA;AAAA",
        "names": [
          "$$run_1",
          "ctx_1",
          "report",
          "err",
          "error_1",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?mode=server&my-example=1.ts" => {
      "code": "import { server as entry } from "my-example/server";
import root from "./example.ts?mode=server&my-example=0.ts";
import { $$wrapBlock as wrapper } from "my-example/runtime";
export default entry("26ecc3a5-0-anonymous", wrapper(root));",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACM,IAAI;EACFA,OAAO,CAAC,CAAC;AACX,CAAC,CAAC,OAAOC,GAAG;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;IAAAC,CAAA;IAAAC,CAAA;EAAA;AAAA",
    "names": [
      "doStuff",
      "err",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      try {
        doStuff();
      } catch (err) {
        'use server';
        await report(err);
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?mode=server&my-example=0.ts",
  ],
}
`;
